@@ -1,3 +1,15 @@
+2014-06-27  Alex Christensen  <achristensen@webkit.org>
+
+        Remove extra operations from 64-bit or on armv7.
+        https://bugs.webkit.org/show_bug.cgi?id=134408
+
+        Reviewed by Geoffrey Garen.
+
+        * cssjit/SelectorCompiler.cpp:
+        (WebCore::SelectorCompiler::SelectorCodeGenerator::addFlagsToElementStyleFromContext):
+        Only do or operations if it would change values.
+        Often we're only setting one flag, so half the operations are not necessary.
+
 2014-06-27  Beth Dakin  <bdakin@apple.com>
 
         ScrollView::rootViewToTotalContents() needs to take topContentInset into account
